# rpycli

./: .isopy.yaml  README.md  dev-requirements.txt  pyproject.toml  pyrightconfig.json  sample.cmd
rpycli/: arg_enum.py  argparse.py  cli.py  context.py  cprint.py  error.py  fs.py  init.py  invoke.py  log_level.py  logger.py  logging.py  prelude.py  proc.py  time_util.py
rpycli/sample/: foo.py  main.py
rpycli/tests/: test_context.py  test_logger.py  test_logging.py
