[project]
dependencies = [
  "colorama",
  "pywin32 ; platform_system == \"Windows\"",
]
name = "rpycli"
version = "0.0.4"

[project.optional-dependencies]
dev = [
  "mypy",
  "pyright",
  "pytest",
  "types-pywin32",
]

[tool.mypy]
packages = [
  "rpycli",
]
strict = false
warn_unused_ignores = false
