[project]
dependencies = [
  "colorama",
  "pywin32 ; platform_system == \"Windows\"",
]
name = "rpycli"
version = "0.0.5"

[project.optional-dependencies]
dev = [
  "mypy",
  "pyright",
  "pytest",
  "types-pywin32",
]

[tool.mypy]
packages = [
  "rpycli",
]
strict = true
warn_unused_ignores = false
